--- a/SqlBlob/pom.xml
+++ b/SqlBlob/pom.xml
@@ -8,19 +8,14 @@
     <artifactId>SqlBlob</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <repositories>
-        <repository>
-            <id>codelds</id>
-            <url>https://code.lds.org/nexus/content/groups/main-repo</url>
-        </repository>
-    </repositories>
-
     <dependencies>
 
         <dependency>
             <groupId>com.oracle</groupId>
             <artifactId>ojdbc6</artifactId>
             <version>11.2.0</version>
+            <scope>system</scope>
+            <systemPath>/home/oracle/JavaLibs/ojdbc6.jar</systemPath>
         </dependency>
 
     </dependencies>
